@@ -110,6 +110,11 @@ Drupal 8.0, xxxx-xx-xx (development version)
 - Added Views and Views UI module to core.
 - Added Entity Reference field type to core.
 - Added Date field type to core.
+- Added a Web Services module package.
+    * Added a RESTful web services provider module.
+    * Added a serialization module using the Symfony serialization component.
+    * Added a Hypertext Application Language (HAL) serialization module.
+    * Added a HTTP Basic authentication provider module.
 
 Drupal 7.0, 2011-01-05
 ----------------------
